<resources>

    <string name="app_name">Delicious Dishes</string>
    <string name="nav_add">Add</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_meal_plan">Meal Planner</string>
    <string name="nav_home">Home</string>
    <string name="toolbar_add">Add Meals</string>
    <string name="toolbar_favourites">Your Favourites</string>
    <string name="link_description">Click on the link below for the recipe!</string>
    <string name="add_meal_title">Meal Name:</string>
    <string name="take_picture">Take Picture</string>
    <string name="save_meal">Save Meal</string>
    <string name="add_to_favourites_exists">Already in your favourites</string>
    <string name="add_to_favourites_success">Added to your favourites</string>
    <string name="remove_from_favourites_exists">Not in your favourites</string>
    <string name="remove_from_favourites_success">Removed from your favourites</string>
    <string name="meal_added_success">Meal Added Successfully</string>
    <string name="meal_added_failure">Take picture of meal!</string>
    <string name="exception">Exception:</string>
    <string name="permission_denied">Permission denied</string>
    <string name="login_email">Enter Email:</string>
    <string name="login_password">Enter Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_name">Enter Full Name:</string>
    <string name="create_account">Not got an account? Register Now!</string>
    <string name="login_to_account">Already registered? Login Now!</string>
    <string name="email_error">Email is required</string>
    <string name="password_error">Password is required</string>
    <string name="password_length_error">Password be greater than or equal to 6 characters</string>
    <string name="login_successful">Logged in Successfully</string>
    <string name="logout_successful">Logged out Successfully</string>
    <string name="register_successful">Registered Successfully</string>

</resources>